<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_list"
            android:title="ListView" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_list"
            android:title="Contact" />
        <item
            android:id="@+id/nav_tos"
            android:icon="@drawable/ic_menu_tos"
            android:title="Term of Use" />
    </group>

</menu>
