<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.espresso.MainActivity">


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit_name_description"
        android:hint="@string/edit_name_hint" />

    <Button
        android:id="@+id/button_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_greeting_description"
        android:text="@string/button_greeting" />

    <TextView
        android:id="@+id/text_greeting_unique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World Unique!" />

    <TextView
        android:id="@+id/text_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <include layout="@layout/duplicate_id" />
</LinearLayout>
